# XSIAM_AI_Tool_On_Vertex

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  run_app.sh
deployment/: deploy.py  remote.py  run.py
ingestion_doc_tool/: agent.py  prompts.py
ingestion_doc_tool/shared_libraries/: prepare_corpus_and_data.py  readme_corpus.json  xsiam_marketplace_ingestion_method.txt
spl_to_xql/: agent.py  prompts.py
web_app/: app.py  index.html  python-requirements.txt  requirements.txt
web_app_dm_gen/: app.py  requirements.txt
web_app_doc_spl/: app.py  index.html
web_app_doc_spl/static/css/: styles.css
web_app_doc_spl/static/js/: script.js
web_app_doc_spl/templates/: index.html
