[project]
name = "ingestion_doc_tool"
version = "0.1.0"
description = "Generate Cortex XSIAM Ingestion Doc tool"
authors = [
        { name = "Hiep Nguyen", email = "hnguyen@paloaltonetworks.com" }
]

license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"
tabulate = "^0.9.0"
google-auth = "^2.36.0"
requests = "^2.31.0"
google-adk = "^0.1.0"
google-cloud-aiplatform = {extras = ["adk", "agent_engines"], version = "^1.42.1"}
llama-index = "^0.12"
absl-py = "^2.1.0"
cloudpickle = "^3.0.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
scikit-learn = "^1.6.1"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"

[tool.poetry.scripts]
spl_to_xql = "spl_to_xql:app"
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
